Improved error message when attempting to execute a method on an unknown type; e.g., passing a query variable to a static method would give the misleading message that the error was due to the query variable not being available locally, when in fact the problem is merely that the defining type of the static method wasn't included in the list of known types.

--- a/Source/Qactive/Properties/Errors.resx
+++ b/Source/Qactive/Properties/Errors.resx
@@ -129,6 +129,9 @@
   <data name="ExpressionCallMissingLocalInstanceFormat" xml:space="preserve">
     <value>The query executes a method "{0}" on a local type "{1}" for which an instance is not available locally.</value>
   </data>
+  <data name="ExpressionCallOnUnknownTypeFormat" xml:space="preserve">
+    <value>The query executes a method "{0}" on an unknown type "{1}".</value>
+  </data>
   <data name="ExpressionClosureBug" xml:space="preserve">
     <value>A closure was not replaced while visiting its members.  This may indicate a problem with the visitor.</value>
   </data>
