- Logging subscriptions (as Info), duplex enumerations (as Info) and all notifications and enumerated values (as Verbose), via the Qactive TraceSource. (The source is set to Info by default.) - Some related refactoring and logging improvements.

--- a/Source/Qactive-Net45/Properties/LogMessages.resx
+++ b/Source/Qactive-Net45/Properties/LogMessages.resx
@@ -123,6 +123,12 @@
   <data name="ClientSendingExpression" xml:space="preserve">
     <value>Client sending expression</value>
   </data>
+  <data name="Received" xml:space="preserve">
+    <value>Received</value>
+  </data>
+  <data name="Sending" xml:space="preserve">
+    <value>Sending</value>
+  </data>
   <data name="ServerReceivingExpression" xml:space="preserve">
     <value>Server receiving expression</value>
   </data>
